--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,8 @@ nav {
   position: fixed;
   left: 0px;
   top: 0px;
-  padding: 30px; }
+  padding: 30px;
+  z-index: 10; }
   nav a {
     text-decoration: none;
     font-family: 'Caveat', san-serif;
